Bug 11550 - smbstatus doesn't show named streams info
Summary: smbstatus doesn't show named streams info
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-12 10:41 UTC by Ralph Böhme
Modified: 2015-10-21 09:54 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.3.next, 4.2.next. (5.51 KB, patch)
2015-10-14 21:43 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2015-10-12 10:41:39 UTC
Add stream name argument to share_entry_forall machinery so smbstatus can print the stream name of a file.

Patch to follow.
Comment 1 Jeremy Allison 2015-10-14 21:43:11 UTC
Created attachment 11495 [details]
git-am fix for 4.3.next, 4.2.next.

Cherry-picked from master.
Comment 2 Jeremy Allison 2015-10-15 17:25:05 UTC
Re-assigning to Karolin for inclusion in 4.3.next, 4.2.next.
Comment 3 Karolin Seeger 2015-10-19 10:20:37 UTC
(In reply to Jeremy Allison from comment #2)
Pushed to autobuild-v4-[2|3]-test.
Comment 4 Karolin Seeger 2015-10-21 09:54:37 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to both branches.
Closing out bug report.

Thanks!