source3/locking/share_mode_lock.c
@@ -732,7 +732,9 @@ int share_mode_forall(int (*fn)(struct file_id fid,
 
 struct share_entry_forall_state {
 	int (*fn)(const struct share_mode_entry *e,
-		  const char *service_path, const char *base_name,
+		  const char *service_path,
+		  const char *base_name,
+		  const char *stream_name,
 		  void *private_data);
 	void *private_data;
 };
@@ -748,7 +750,9 @@ static int share_entry_traverse_fn(struct file_id fid,
 		int ret;
 
 		ret = state->fn(&data->share_modes[i],
-				data->servicepath, data->base_name,
+				data->servicepath,
+				data->base_name,
+				data->stream_name,
 				state->private_data);
 		if (ret != 0) {
 			return ret;
@@ -764,7 +768,8 @@ static int share_entry_traverse_fn(struct file_id fid,
 ********************************************************************/
 
 int share_entry_forall(int (*fn)(const struct share_mode_entry *,
-				 const char *, const char *, void *),
+				 const char *, const char *,
+				 const char *, void *),
 		       void *private_data)
 {
 	struct share_entry_forall_state state = {
